# trapi-predict-kit

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: README.md
docs/getting-started/: create-model.md  create-project.md  deploy-api.md  expose-model.md
src/trapi_predict_kit/: __init__.py  config.py  decorators.py  loaded_model.py  normalize.py  rdf_utils.py  save.py  trapi.py  trapi_parser.py  types.py  utils.py
tests/: conftest.py  dev.py  test_decorator.py  test_save.py  test_trapi.py  test_utils.py
